# scopehal-waveforms-bridge

./: .gitmodules  CMakeLists.txt  README.md
src/wfmserver/: CMakeLists.txt  DigilentSCPIServer.cpp  DigilentSCPIServer.h  ScpiServerThread.cpp  WaveformServerThread.cpp  main.cpp  wfmserver.h
